Add `phpstan/extension-installer` to `allow-plugins`

--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
     "optimize-autoloader": true,
     "sort-packages": true,
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "phpstan/extension-installer": true
     }
   }
 }
