Fix test suite: resolve "phpcodesniffer-composer-installer" warning during `composer compat` (#129)

--- a/composer.json
+++ b/composer.json
@@ -60,5 +60,13 @@
     "psr-4": {
       "Auth0\\JWTAuthBundle\\": "Tests/"
     }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "phpstan/extension-installer": true
+    }
   }
 }
