--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,4 +1,13 @@
+includes:
+  - vendor/phpstan/phpstan-strict-rules/rules.neon
+  - vendor/phpstan/phpstan-symfony/extension.neon
+  - vendor/phpstan/phpstan-symfony/rules.neon
+
 parameters:
   level: max
   paths:
     - src
+    - tests
+
+  bootstrapFiles:
+    - %rootDir%/../../squizlabs/php_codesniffer/autoload.php
