--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "ext-mbstring": "*",
     "ext-openssl": "*",
     "auth0/auth0-php": "^7.0",
-    "symfony/framework-bundle": "^4.4 || ~5.1"
+    "symfony/framework-bundle": "^5.2 || ^6.0"
   },
   "require-dev": {
     "nunomaduro/phpinsights": "^2.0",
@@ -43,7 +43,7 @@
     "phpstan/phpstan": "^1.0",
     "phpstan/phpstan-strict-rules": "^1.0",
     "phpstan/phpstan-symfony": "^1.0",
-    "symfony/security-http": "^4.4 || ^5.1 || ^6.0",
+    "symfony/security-http": "^5.2 || ^6.0",
     "vimeo/psalm": "^4.0"
   },
   "autoload": {
