--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,92 +1,159 @@
 version: 2.1
 
 commands:
-  prepare:
+  setup:
+    steps:
+      - run:
+          name: Configure environment
+          command: |
+            apk update
+
+      - checkout
+
+      - run:
+          name: Install dependencies
+          command: |
+            EXPECTED_CHECKSUM="$(php -r 'copy("https://composer.github.io/installer.sig", "php://stdout");')"
+            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+            ACTUAL_CHECKSUM="$(php -r "echo hash_file('sha384', 'composer-setup.php');")"
+
+            if [ "$EXPECTED_CHECKSUM" != "$ACTUAL_CHECKSUM" ]; then
+                >&2 echo 'ERROR: Invalid installer checksum'
+                rm composer-setup.php
+                exit 1
+            fi
+
+            php composer-setup.php --quiet
+            RESULT=$?
+            rm composer-setup.php
+
+            php composer.phar install --no-interaction --prefer-dist
+
+  setup-pcov:
+    steps:
+      - run:
+          name: Configure pcov
+          command: |
+            apk add autoconf gcc make musl-dev
+            pecl install pcov
+            docker-php-ext-enable pcov
+
+  run-phpinsights:
+    steps:
+      - run:
+          name: Run code quality analysis (PHP Insights)
+          command: php -d memory-limit=-1 ./vendor/bin/phpinsights -v --no-interaction --min-quality=100 --min-complexity=50 --min-architecture=100 --min-style=100
+
+  run-phpstan:
+    steps:
+      - run:
+          name: Run static code analysis (PHPStan)
+          command: php -d memory_limit=-1 ./vendor/bin/phpstan analyse --ansi
+
+  run-psalm:
+    steps:
+      - run:
+          name: Run static code analysis (Psalm)
+          command: php -d memory_limit=-1 ./vendor/bin/psalm
+
+  run-pest:
+    steps:
+      - run:
+          name: Run unit tests (Pest)
+          command: php -d memory_limit=-1 ./vendor/bin/pest --stop-on-failure --min=100
+
+  run-snyk:
+    steps:
+      - run:
+          name: Run vulnerabilities tests (Snyk)
+          command: |
+            apk add npm
+            npm install -g snyk
+            snyk test --dev --org=auth0-sdks --project-name=auth0-PHP
+
+jobs:
+  phpinsights:
+    parameters:
+      php:
+        type: string
+    docker:
+      - image: php:<< parameters.php >>-cli-alpine
+    steps:
+      - setup
+      - run-phpinsights
+  phpstan:
+    parameters:
+      php:
+        type: string
+    docker:
+      - image: php:<< parameters.php >>-cli-alpine
+    steps:
+      - setup
+      - run-phpstan
+  psalm:
+    parameters:
+      php:
+        type: string
+    docker:
+      - image: php:<< parameters.php >>-cli-alpine
+    steps:
+      - setup
+      - run-psalm
+  semgrep:
+    docker:
+      - image: returntocorp/semgrep:latest
     steps:
       - checkout
       - run:
-          name: Configure PHP environment
-          command: |
-            sudo touch /usr/local/etc/php/php.ini
-            echo "memory_limit = -1" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "display_startup_errors = On" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "xdebug.mode = coverage" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "xdebug.force_display_errors = On" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "error_reporting = E_ALL ^ E_DEPRECATED" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "xdebug.force_error_reporting = E_ALL ^ E_DEPRECATED" | sudo tee -a /usr/local/etc/php/php.ini
-            echo "detect_unicode = Off" | sudo tee -a /usr/local/etc/php/php.ini
-            sudo apt-get update
-            sudo composer self-update
-      - restore_cache:
-          keys:
-            - composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.lock" }}
-            - composer-v1-{{ .Environment.CIRCLE_JOB }}
-      - run: composer validate --strict
-      - run: composer install -n --prefer-dist
-      - run: composer update --prefer-dist --no-interaction
-      - persist_to_workspace:
-          root: .
-          paths:
-            - composer.*
-            - .snyk
-      - save_cache:
-          key: composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.lock" }}
-          paths:
-            - vendor
-  run-php-compatibility:
-    steps:
-      - run: composer compat
-  run-static-analysis:
-    steps:
-      - run: composer analyze
-  run-unit-tests:
-    steps:
-      - run: composer test-unit-ci
-      - store_artifacts:
-          path: build/coverage.xml
-
-jobs:
-  php_7_3:
+          name: Run static code analysis (Semgrep)
+          command: semgrep --config auto
+  pest:
+    parameters:
+      php:
+        type: string
     docker:
-      - image: circleci/php:7.3
+      - image: php:<< parameters.php >>-cli-alpine
     steps:
-      - prepare
-      - run-php-compatibility
-      - run-unit-tests
-  php_7_4:
-    docker:
-      - image: circleci/php:7.4
-    steps:
-      - prepare
-      - run-unit-tests
-  php_8_0:
-    docker:
-      - image: circleci/php:8.0
-    steps:
-      - prepare
-      - run-unit-tests
+      - setup
+      - setup-pcov
+      - run-pest
   snyk:
+    parameters:
+      php:
+        type: string
     docker:
-      - image: snyk/snyk-cli:composer
+      - image: php:<< parameters.php >>-cli-alpine
     steps:
-      - attach_workspace:
-          at: .
-      - run: snyk test
-      - run:
-          command: |
-            if [[ "${CIRCLE_BRANCH}" == "master" ]]
-            then
-            snyk monitor --org=auth0-sdks
-            fi
-          when: always
+      - setup
+      - run-snyk
 
 workflows:
-  build-and-test:
+  test:
     jobs:
-      - php_7_3
-      - php_7_4
-      - php_8_0
+      - semgrep
+      - phpinsights:
+          matrix:
+            parameters:
+              php: ["7.4", "8.0", "8.1"]
+      - phpstan:
+          matrix:
+            parameters:
+              php: ["7.4", "8.0", "8.1"]
+      - psalm:
+          matrix:
+            parameters:
+              php: ["7.4", "8.0", "8.1"]
+      - pest:
+          matrix:
+            parameters:
+              php: ["7.4", "8.0", "8.1"]
+      - hold:
+          type: approval
       - snyk:
-          context: snyk-env
+          matrix:
+            parameters:
+              php: ["7.4", "8.0", "8.1"]
+          context:
+            - snyk-env
           requires:
-            - php_7_3
+            - hold
