--- a/composer.json
+++ b/composer.json
@@ -30,27 +30,32 @@
   "homepage": "https://github.com/auth0/symfony",
   "require": {
     "php": "^8.1",
-    "auth0/auth0-php": "^8.7",
-    "symfony/cache": "^6.1",
-    "symfony/framework-bundle": "^6.1",
-    "symfony/security-bundle": "^6.1"
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "ext-openssl": "*",
+    "auth0/auth0-php": "^8.10",
+    "symfony/cache": "^6.4",
+    "symfony/framework-bundle": "^6.4",
+    "symfony/security-bundle": "^6.4"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.28",
-    "firebase/php-jwt": "^6.3",
-    "hyperf/event": "^2.2",
-    "laravel/pint": "^1.2",
-    "mockery/mockery": "^1.5",
-    "nyholm/psr7": "^1.5",
-    "pestphp/pest": "^1.21",
-    "php-http/mock-client": "^1.5",
-    "phpstan/phpstan": "^1.9",
-    "phpstan/phpstan-strict-rules": "^1.4.4",
-    "phpunit/phpunit": "^9.5",
-    "rector/rector": "^0.14.7",
-    "squizlabs/php_codesniffer": "^3.7",
-    "vimeo/psalm": "^4.30",
-    "wikimedia/composer-merge-plugin": "^2.0"
+    "ergebnis/composer-normalize": "^2",
+    "firebase/php-jwt": "^6",
+    "friendsofphp/php-cs-fixer": "^3",
+    "hyperf/event": "^2",
+    "mockery/mockery": "^1",
+    "nyholm/psr7": "^1",
+    "pestphp/pest": "^2",
+    "php-http/mock-client": "^1",
+    "phpstan/phpstan": "^1",
+    "phpstan/phpstan-strict-rules": "^1",
+    "rector/rector": "0.17.6",
+    "vimeo/psalm": "^5",
+    "wikimedia/composer-merge-plugin": "^2"
+  },
+  "suggest": {
+    "psr/cache-implementation": "(PSR-6 Cache) Improve performance by avoiding making redundant network requests.",
+    "psr/event-dispatcher-implementation": "(PSR-14 Event Dispatcher) Observe and react to events when they occur."
   },
   "prefer-stable": true,
   "autoload": {
@@ -65,29 +70,58 @@
   },
   "config": {
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
-      "pestphp/pest-plugin": true,
       "ergebnis/composer-normalize": true,
-      "wikimedia/composer-merge-plugin": true,
-      "symfony/flex": true,
-      "phpstan/extension-installer": true
-    },
-    "composer-normalize": {
-      "indent-size": 4,
-      "indent-style": "space"
+      "infection/extension-installer": false,
+      "pestphp/pest-plugin": true,
+      "php-http/discovery": false,
+      "wikimedia/composer-merge-plugin": true
     },
     "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "process-timeout": 0,
     "sort-packages": true
   },
+  "extra": {
+    "merge-plugin": {
+      "ignore-duplicates": false,
+      "include": [
+        "composer.local.json"
+      ],
+      "merge-dev": true,
+      "merge-extra": false,
+      "merge-extra-deep": false,
+      "merge-scripts": false,
+      "recurse": true,
+      "replace": true
+    }
+  },
   "scripts": {
-    "phpstan": "@php vendor/bin/phpstan analyse",
-    "phpstan:pro": "@php vendor/bin/phpstan analyse --pro",
-    "pint": "@php vendor/bin/pint --test",
-    "pint:fix": "@php vendor/bin/pint",
+    "pest": [
+      "@putenv XDEBUG_MODE=coverage",
+      "@php vendor/bin/pest --colors=always --strict-global-state --fail-on-risky --fail-on-warning --coverage --strict-coverage --compact"
+    ],
+    "pest:ci": [
+      "@pest:fast --order-by=random --no-progress"
+    ],
+    "pest:fast": [
+      "@pest --parallel"
+    ],
+    "phpcs": [
+      "@putenv PHP_CS_FIXER_IGNORE_ENV=1",
+      "@php vendor/bin/php-cs-fixer fix --dry-run --diff"
+    ],
+    "phpcs:fix": "@php vendor/bin/php-cs-fixer fix",
+    "phpstan": "@php vendor/bin/phpstan analyze",
     "psalm": "@php vendor/bin/psalm",
     "psalm:fix": "@php vendor/bin/psalter --issues=all",
     "rector": "@php vendor/bin/rector process src --dry-run",
     "rector:fix": "@php vendor/bin/rector process src",
-    "test": "@php vendor/bin/pest --order-by random"
+    "test": [
+      "@pest",
+      "@phpstan",
+      "@psalm",
+      "@rector",
+      "@phpcs"
+    ]
   }
 }
