--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
     "ext-mbstring": "*",
     "ext-openssl": "*",
     "auth0/auth0-php": "^8.10",
-    "symfony/cache": "^6.4",
-    "symfony/framework-bundle": "^6.4",
-    "symfony/security-bundle": "^6.4"
+    "symfony/cache": "^6.4 || ^7.0",
+    "symfony/framework-bundle": "^6.4 || ^7.0",
+    "symfony/security-bundle": "^6.4 || ^7.0"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2",
