--- a/.github/workflows/rl-scanner.yml
+++ b/.github/workflows/rl-scanner.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build PHP Package
         shell: bash
         run: |
-          zip -r auth0-php-package.zip 
+          zip -r symfony-package.zip src config examples composer.json README.md LICENSE.txt UPGRADING.md
 
       - name: Get Artifact Version
         id: get_version
@@ -54,7 +54,7 @@ jobs:
       - name: Output build artifact
         id: output_build_artifact
         run: |
-          echo "scanfile=$(ls auth0-php-package.zip)" >> $GITHUB_OUTPUT
+          echo "scanfile=$(ls symfony-package.zip)" >> $GITHUB_OUTPUT
 
       - name: Set up Python
         uses: actions/setup-python@v4
