--- a/.github/workflows/rl-scanner.yml
+++ b/.github/workflows/rl-scanner.yml
@@ -25,14 +25,9 @@ on:
 
 jobs:
   rl-scanner:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged && startsWith(github.event.pull_request.head.ref, 'release/'))
     runs-on: ubuntu-latest
     outputs:
       scan-status: ${{ steps.rl-scan-conclusion.outcome }}
-
-    permissions:
-      php-version: write
-      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Checkout code
@@ -45,7 +40,7 @@ jobs:
         with:
           php-version: ${{ inputs.php-version }}
 
-      - name: Build Laravel
+      - name: Build Symfony
         shell: bash
         run: |
           zip -r ${{ inputs.artifact-name }} ./*
