dependencies : allow symfony 8

--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
     "ext-mbstring": "*",
     "ext-openssl": "*",
     "auth0/auth0-php": "^8.18",
-    "symfony/cache": "^6.4 || ^7.0",
-    "symfony/framework-bundle": "^6.4 || ^7.0",
-    "symfony/security-bundle": "^6.4 || ^7.0"
+    "symfony/cache": "^6.4 || ^7.0 || ^8.0",
+    "symfony/framework-bundle": "^6.4 || ^7.0 || ^8.0",
+    "symfony/security-bundle": "^6.4 || ^7.0 || ^8.0"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2",
